# techniki

./: README.md
Lab1,2/: ctable.cpp  ctable.h  l1zad1.cpp  l1zad2,3.cpp  l1zad4.cpp  l2zad1.cpp
Lab3/: ctreedynamic.cpp  ctreedynamic.h  ctreedynamic_temp.h  ctreestatic.cpp  ctreestatic.h  main  main.cpp
Lab4/: ctab.cpp  ctab.h  ctable.cpp  ctable.h  main  main.cpp
mini_projekt/: CMakeLists.txt
mini_projekt/include/: c_genetic_algorithm.h  c_individual.h  c_knapsack_problem.h  cmysmartpointer.h  error.h  my_random.h
mini_projekt/src/: c_genetic_algorithm.cpp  c_individual.cpp  c_knapsack_problem.cpp  main.cpp  my_random.cpp
